Layout bug fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,7 @@
 }
 .tvshow-content {
   height: 70%;
+  overflow: hidden;
 }
 @media (min-width: 350px) and (max-width: 768px) {
   .tvshow-content {
